Fix for edit button

--- a/ethnode/webui/profile-new.html
+++ b/ethnode/webui/profile-new.html
@@ -57,7 +57,7 @@
                 </div>
                 <div id="navigation" class="collapse navbar-collapse tab-info">
                     <ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
-                        <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li>
+                        <!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
                         <li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
                         <li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
                         <li class="nav-item"><a href="" open-modal="#add-gig" class="nav-link open-modal">New Gig</a></li>
