--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="navigation" class="collapse navbar-collapse tab-info">
                     <ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
-                        <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li>
+                        <!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
                         <li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
                         <li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
                         <li class="nav-item"><a href="" open-modal="#add-gig" class="nav-link open-modal">New Gig</a></li>
@@ -104,7 +104,10 @@
                               <div class="user-item skills"><span class="item-title font-size-14">Skills:</span></div>
                               <div class="user-item languages"><span class="item-title font-size-14">Languages:</span></div>
                               <p class="user-description font-size-16 mrg-vertical-20"></p>
-                              <div class="profile-social">
+                              <div>
+                                <a href="" open-modal="#edit-profile" class="nav-link hidden open-modal btn btn-pink editBtnProfile">Edit profile</a>
+                              </div>
+                              <!-- <div class="profile-social">
                                   <ul class="list-inline">
                                       <li><a href=""><i class="icon-facebook"></i></a></li>
                                       <li><a href=""><i class="icon-twitter"></i></a></li>
@@ -112,7 +115,7 @@
                                       <li><a href=""><i class="icon-instagram"></i></a></li>
                                       <li><a href=""><i class="icon-google"></i></a></li>
                                   </ul>
-                              </div>
+                              </div> -->
                           </div>
                       </div>
                   </div>
