--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -59,7 +59,10 @@
                               <div class="user-item skills"><span class="item-title font-size-14">Skills:</span></div>
                               <div class="user-item languages"><span class="item-title font-size-14">Languages:</span></div>
                               <p class="user-description font-size-16 mrg-vertical-20"></p>
-                              <div class="profile-social">
+                              <div>
+                                <a href="" open-modal="#edit-profile" class="nav-link hidden open-modal btn btn-pink editBtnProfile">Edit profile</a>
+                              </div>
+                              <!-- <div class="profile-social">
                                   <ul class="list-inline">
                                       <li><a href=""><i class="icon-facebook"></i></a></li>
                                       <li><a href=""><i class="icon-twitter"></i></a></li>
@@ -67,7 +70,7 @@
                                       <li><a href=""><i class="icon-instagram"></i></a></li>
                                       <li><a href=""><i class="icon-google"></i></a></li>
                                   </ul>
-                              </div>
+                              </div> -->
                           </div>
                       </div>
                   </div>
