FIxed api cdn + small issues

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -213,7 +213,7 @@
                         </div>
                         <div class="modal-body">
                             <div id="cropper-wrap-gig" class="cropper-wrap" style="display: none;">
-
+        
                             </div>
                             <div class="form-group">
                                 <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
@@ -233,15 +233,15 @@
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                                         <select id="category" class="ui dropdown">
-                          <option value="">Select Category</option>
-                          <option value="1">Software Development</option>
-                          <option value="2">Entertainment</option>
-                          <option value="3">Graphic Design</option>
-                          <option value="4">Content Writing</option>
-                          <option value="5">Accountants</option>
-                          <option value="6">Consultants</option>
-                          <option value="7">Assistants</option>
-                        </select>
+                                          <option value="">Select Category</option>
+                                          <option value="1">Software Development</option>
+                                          <option value="2">Entertainment</option>
+                                          <option value="3">Graphic Design</option>
+                                          <option value="4">Content Writing</option>
+                                          <option value="5">Accountants</option>
+                                          <option value="6">Consultants</option>
+                                          <option value="7">Assistants</option>
+                                        </select>
                                     </div>
                                     <div style="height: 38px; float: right; margin-top: 20px" class="ui right labeled input">
                                         <label for="reputationCost" class="ui label"><i style="font-size: 17px" class="material-icons">polymer</i></label>
@@ -250,11 +250,11 @@
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
                                         <select name="gig-tags" multiple="" class="ui fluid dropdown normal search gig-tags">
-                          <option value="">Add gig tags (limit: 10)...</option>
-                          <option value="programming">Programming</option>
-                          <option value="copywriting">Copywriting</option>
-                          <option value="userexperience">User Experience</option>
-                        </select>
+                                          <option value="">Add gig tags (limit: 10)...</option>
+                                          <option value="programming">Programming</option>
+                                          <option value="copywriting">Copywriting</option>
+                                          <option value="userexperience">User Experience</option>
+                                        </select>
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield whole-line">
                                         <label for="description" class="label-control gig-title-label">Description (what have you done or currently do?)</label>
@@ -363,20 +363,20 @@
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
                                         <select name="skills" multiple="" class="ui fluid dropdown normal search skills-dropdown">
-                              <option value="">Add skills tags (limit: 10)...</option>
-                              <option value="angular">Angular</option>
-                              <option value="python">Python</option>
-                              <option value="userexperience">User Experience</option>
-                            </select>
+                                          <option value="">Add skills tags (limit: 10)...</option>
+                                          <option value="angular">Angular</option>
+                                          <option value="python">Python</option>
+                                          <option value="userexperience">User Experience</option>
+                                        </select>
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
                                         <select name="skills" multiple="" class="ui fluid dropdown normal search languages-dropdown">
-                              <option value="">Add languages you know (limit: 10)...</option>
-                              <option value="bulgarian">Bulgarian</option>
-                              <option value="lithuanian">Lithuanian</option>
-                            </select>
+                                          <option value="">Add languages you know (limit: 10)...</option>
+                                          <option value="bulgarian">Bulgarian</option>
+                                          <option value="lithuanian">Lithuanian</option>
+                                        </select>
                                     </div>
-                                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
+                                    <!-- <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                                         <div id="country" style="float: left" class="ui search selection dropdown">
                                             <input type="hidden" name="country"><i class="dropdown icon"></i>
                                             <div class="default text">Select Country</div>
@@ -390,7 +390,7 @@
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
                                         <input id="city" type="text" name="city" class="mdl-textfield__input">
                                         <label for="city" class="mdl-textfield__label">City</label>
-                                    </div>
+                                    </div> -->
                                     <div class="mdl-textfield mdl-js-textfield whole-line">
                                         <textarea id="description" type="text" rows="3" name="description" class="mdl-textfield__input"></textarea>
                                         <label for="description" class="mdl-textfield__label">Summary</label>
@@ -473,7 +473,7 @@
                         <div class="modal-footer no-pdd-horizon">
                             <div class="text-right clearfix">
                                 <p class="pull-left font-size-14">
-                                    Price: <span id="redesigned-modal-gig-price"> 0.00 </span> <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;&nbsp; Lock: <span id="redesigned-modal-gig-price-req">0.00 </span>
+                                  Price: <span id="redesigned-modal-gig-price"> 0.00 </span> <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;&nbsp; Lock: <span id="redesigned-modal-gig-price-req">0.00 </span>
                                 </p>
                                 <button class="btn btn-default btn-sm no-mrg btn-pink" data-dismiss="modal">
                                   Order
