issues fix + 10x speed for loading

--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -759,7 +759,7 @@
                             <div class="form-group">
                                 <label>Expertise Category</label>
                                 <select id='domain-expertise-select' class="ui fluid search dropdown ui-element-style form-control flex-center">
-                                    <option value="">Select category</option>
+                                    <option value="all">All categories</option>
                                     <option value="sd">Software Development</option>
                                     <option value="fa">Finance & Accounting</option>
                                     <option value="ma">Music & Audio</option>
@@ -800,8 +800,8 @@
                                             </div>
                                         </div>
                                         <div class="marker marker-0"><sup><i class="material-icons">polymer</i></sup>0</div>
-                                        <div class="marker marker-50"><sup><i class="material-icons">polymer</i></sup>5,000</div>
-                                        <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>10K+</div>
+                                        <div class="marker marker-50"><sup><i class="material-icons">polymer</i></sup>1,000</div>
+                                        <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>2K+</div>
                                     </div>
                                 </div>
                             </div>
