modal add-new in progress update

--- a/ethnode/webui/profile-new.html
+++ b/ethnode/webui/profile-new.html
@@ -189,7 +189,7 @@
 			<div class="beep-modal-content-hc"></div>
 		</div>
 		
-		<div id="edit-profile-headline" class="modal-box edit flex floating">
+		<!-- <div id="edit-profile-headline" class="modal-box edit flex floating">
 			<div class="modal-box-content">
 				<div class="inner-modal">
 					<div class="content">
@@ -223,7 +223,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div id="new-modal-thing">
 			<div id="new-modal-wrap">
