code cleaning + work on slider adding for add new gig

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -187,7 +187,7 @@
 										<div class="form-group">
 											<label>Categories</label>
 											<select id='new-gig-category' class="ui fluid search dropdown ui-element-style form-control flex-center">
-												<option value="sc">Select Category</option>
+												<option value="all">All categories</option>
 												<option value="sd">Software Development</option>
 												<option value="fa">Finance & Accounting</option>
 												<option value="ma">Music & Audio</option>
@@ -230,7 +230,6 @@
 											<label>Expire Date</label>
 											<input  name="startDate" type="text" class="form-control" id='newGigexpire'>
 										</div>
-			
 									</form>
 								</div>
 							</div>
