--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -915,20 +915,11 @@
 	 crossorigin="anonymous"></script>
 	<!-- Semantic UI JS-->
 	<script src="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.js"></script>
-	<!-- Owl Carousel JS-->
-	<script src="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.min.js"></script>
-	<!-- Moment.JS-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-	<!-- Bootstrap Date Time Picker-->
-	<script src="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/js/bootstrap-material-datetimepicker.js"></script>
-	<!-- Moment JS-->
-	<script src="https://cdn.jsdelivr.net/npm/moment@2.19.1/moment.min.js"></script>
 	<!-- Material Design Bootstrap-->
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<!-- Jquery Easing-->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<!-- Croppie-->
+	<script src="./node_modules/croppie/croppie.min.js"></script>
 	<!-- Main JS file-->
-	<script src="./node_modules/croppie/croppie.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
