--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -624,7 +624,7 @@
 								<div class="form-group">
 									<label>Categories</label>
 									<select id='new-gig-category' class="ui fluid search dropdown ui-element-style form-control flex-center">
-										<option value="sc">Select Category</option>
+										<option value="all">All categories</option>
 										<option value="sd">Software Development</option>
 										<option value="fa">Finance & Accounting</option>
 										<option value="ma">Music & Audio</option>
@@ -667,7 +667,6 @@
 									<label>Expire Date</label>
 									<input  name="startDate" type="text" class="form-control" id='newGigexpire'>
 								</div>
-	
 							</form>
 						</div>
 					</div>
@@ -1141,20 +1140,11 @@
 	 crossorigin="anonymous"></script>
 	<!-- Semantic UI JS-->
 	<script src="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.js"></script>
-	<!-- Owl Carousel JS-->
-	<script src="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.min.js"></script>
-	<!-- Moment.JS-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-	<!-- Bootstrap Date Time Picker-->
-	<script src="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/js/bootstrap-material-datetimepicker.js"></script>
-	<!-- Moment JS-->
-	<script src="https://cdn.jsdelivr.net/npm/moment@2.19.1/moment.min.js"></script>
 	<!-- Material Design Bootstrap-->
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<!-- Jquery Easing-->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<!-- Croppie-->
+	<script src="./node_modules/croppie/croppie.min.js"></script>
 	<!-- Main JS file-->
-	<script src="./node_modules/croppie/croppie.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
