--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -167,7 +167,7 @@
 							</div>
 							<div class="modal-body">
 								<div id="cropper-wrap-gig" class="cropper-wrap" style="display: none;"></div>
-								<div class="form-group">
+								<div class="form-group full-width">
 									<input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
 									<label for="input-image-gig" class="img-label" style="background-image: url('images/image-video-image-file.png');width: 100%">
 										<p class="add-photo-label"></p>
@@ -180,59 +180,63 @@
 								</div>
 								<div class="modal-inputs">
 									<form action="POST">
-			
-										<div class="form-group">
-											<label>First Name</label>
-											<input id="gig-title" name="gig-title" type="text" class="form-control ">
-										</div>
-										<div class="form-group">
-											<label>Categories</label>
-											<select id='new-gig-category' class="ui fluid search dropdown ui-element-style form-control flex-center">
-												<option value="all">All categories</option>
-												<option value="sd">Software Development</option>
-												<option value="fa">Finance & Accounting</option>
-												<option value="ma">Music & Audio</option>
-												<option value="va">Video & Animation</option>
-												<option value="gd">Graphic & Design</option>
-												<option value="tw">Text & Writing</option>
-												<option value="cs">Consulting Services</option>
-												<option value="os">Other Services</option>
-											</select>
-										</div>
-			
-										<div class="mdl-js-textfield form-group whole-line">
-											<label>Add gig tags (limit: 10)</label>
-											<select name="gig-tags" multiple="" class="ui fluid dropdown normal search gig-tags">
-												<option value="sc" disabled>Select Tag</option>
-												<option value="programming">Programming</option>
-												<option value="copywriting">Copywriting</option>
-												<option value="userexperience">User Experience</option>
-											</select>
-										</div>
-										<div class="form-group">
-											<label>Expire Date</label>
-											<input name="startDate" type="text" class="form-control" id='newGigexpire'>
-										</div>
-										<div class="form-group">
-											<label>Cost of reputation</label>
-											<div class="range-slider">
-												<input class="range-slider__range" id="reputationCost" type="range" value="0" min="0" max="100">
-												<span class="range-slider__value">0</span>
+										<div class="flex">
+											<div class="form-group">
+												<label>First Name</label>
+												<input id="gig-title" name="gig-title" type="text" class="form-control ">
+											</div>
+											<div class="form-group">
+												<label>Categories</label>
+												<select id='new-gig-category' class="ui fluid search dropdown ui-element-style form-control flex-center">
+													<option value="all">All categories</option>
+													<option value="sd">Software Development</option>
+													<option value="fa">Finance & Accounting</option>
+													<option value="ma">Music & Audio</option>
+													<option value="va">Video & Animation</option>
+													<option value="gd">Graphic & Design</option>
+													<option value="tw">Text & Writing</option>
+													<option value="cs">Consulting Services</option>
+													<option value="os">Other Services</option>
+												</select>
 											</div>
 										</div>
-										<div class="form-group">
-											<label>Amount</label>
-											<div class="amount-wrap">
-												<div class="icon">
-													<i class="material-icons">polymer</i>
+										<div class="flex">
+											<div class="mdl-js-textfield form-group whole-line">
+												<label>Add gig tags (limit: 10)</label>
+												<select name="gig-tags" multiple="" class="ui fluid dropdown normal search gig-tags">
+													<option value="sc" disabled>Select Tag</option>
+													<option value="programming">Programming</option>
+													<option value="copywriting">Copywriting</option>
+													<option value="userexperience">User Experience</option>
+												</select>
+											</div>
+											<div class="form-group">
+												<label>Expire Date</label>
+												<input name="startDate" type="text" class="form-control" id='newGigexpire'>
+											</div>
+										</div>
+										<div class="flex">
+											<div class="form-group">
+												<label>Cost of reputation</label>
+												<div class="range-slider">
+													<input class="range-slider__range" id="reputationCost" type="range" value="0" min="0" max="100">
+													<span class="range-slider__value">0</span>
 												</div>
-												<input id="amount" type="text" class="form-control">
-												<div class="amount-label">.00</div>
+											</div>
+											<div class="form-group">
+												<label>Amount</label>
+												<div class="amount-wrap">
+													<div class="icon">
+														<i class="material-icons">polymer</i>
+													</div>
+													<input id="amount" type="text" class="form-control">
+													<div class="amount-label">.00</div>
+												</div>
 											</div>
 										</div>
-										<div class="form-group">
+										<div class="form-group full-width">
 											<label for="description">Description (what have you done or currently do?)</label>
-											<textarea id="description" type="text" rows="3" name="description" class="form-control description" ></textarea>
+											<textarea id="description" type="text" rows="3" name="description" class="form-control description"></textarea>
 										</div>
 									</form>
 								</div>
