--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -31,6 +31,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="./dist/css/main.css">
 	<!--  -->
+	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 </head>
 
 <body class="gigs-page">
@@ -319,7 +320,7 @@
 										</div>
 										<div class="form-group">
 											<label>Expire Date</label>
-											<input name="startDate" type="text" class="form-control" id='newGigexpire'>
+											<input name="startDate" type="text" class="form-control" id='newGigexpire' data-date-format="mm/dd/yyyy">
 										</div>
 									</div>
 									<div class="flex">
