--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -183,7 +183,7 @@
 											</div>
 											<div class="form-group">
 												<label>Expire Date</label>
-												<input name="startDate" type="text" class="form-control" id='newGigexpire'>
+												<input name="startDate" type="text" class="form-control" id='newGigexpire' data-date-format="mm/dd/yyyy">
 											</div>
 										</div>
 										<div class="flex">
