--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -31,6 +31,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="./dist/css/main.css">
 	<!--  -->
+	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 </head>
 
 <body class="gigs-page">
