added reseting form for newGigModal

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -337,7 +337,7 @@
 												<div class="icon">
 													<i class="material-icons">polymer</i>
 												</div>
-												<input id="amount" type="text" class="form-control">
+												<input id="amount" type="number" class="form-control">
 												<div class="amount-label">.00</div>
 											</div>
 										</div>
