--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -229,7 +229,7 @@
 													<div class="icon">
 														<i class="material-icons">polymer</i>
 													</div>
-													<input id="amount" type="text" class="form-control">
+													<input id="amount" type="number" class="form-control">
 													<div class="amount-label">.00</div>
 												</div>
 											</div>
