--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -107,74 +106,18 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- All modals -->
-		<div id="myModal" class="beep-modal-hc">
-			<div class="beep-modal-content-hc"></div>
-		</div>
-		//= templates/add-gig-modal.html
-
-		<div id="edit-profile-headline" class="modal-box edit flex floating">
-			<div class="modal-box-content">
-				<div class="inner-modal">
-					<div class="content">
-						<div class="modal-header">
-							<h3>Edit profile headline image</h3>
-						</div>
-						<div class="success-message">
-							<h1 class="title">Congratulations!</h1>
-							<div class="success-content">
-								<p>Your headline was added.</p>
-							</div>
-							<div class="buttons">
-								<button class="mdl-button mdl-js-button close-button congrats-close">Close the modal to see it</button>
-								<span>OR</span>
-								<button class="mdl-button mdl-js-button create-new">add new job</button>
-							</div>
-						</div>
-						<div class="modal-body">
-							<div class="form-group" id="image-headline-form">
-								<input id="input-image-profile-he" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-								<label for="input-image-profile-he" class="img-label">Add Photo</label>
-								<img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-profile">
-								<img id="input-image-profile-he" src="#" alt="" class="show-image empty">
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button class="mdl-button mdl-js-button close-button">Close</button>
-							<button id="updateProfileHeadline" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
-							<div data-mdl-for="updateProfileHeadline" class="mdl-tooltip">This text will be changed anyway.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		//= templates/edit-profile.html
-		//= templates/redesigned-big-gig-modal.html
 	</div>
-	<!-- jQuery 3.1.1-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<!-- jQuery UI 1.11.2-->
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-	<!-- BootstrapJS 3.3.7-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-	 crossorigin="anonymous"></script>
-	<!-- Semantic UI JS-->
-	<script src="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.js"></script>
-	<!-- Owl Carousel JS-->
-	<script src="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.min.js"></script>
-	<!-- Moment.JS-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-	<!-- Bootstrap Date Time Picker-->
-	<script src="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/js/bootstrap-material-datetimepicker.js"></script>
-	<!-- Moment JS-->
-	<script src="https://cdn.jsdelivr.net/npm/moment@2.19.1/moment.min.js"></script>
-	<!-- Material Design Bootstrap-->
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<!-- Jquery Easing-->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<!-- Modals -->
+	<div id="myModal" class="beep-modal-hc">
+		<div class="beep-modal-content-hc"></div>
+	</div>
+	//= templates/edit-profile.html
+	//= templates/add-gig-modal.html
+	//= templates/redesigned-big-gig-modal.html
+	<!--  -->
+	<!-- Vendor JS -->
+	<script src="dist/js/vendor.min.js"></script>
 	<!-- Main JS file-->
-	<script src="./node_modules/croppie/croppie.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
